# test

./: .gitignore  README.md  pylint.rc  pyproject.toml
chess/: fen.py  lines.py  lines2.py  moveit.py
color/: gen_colors.py  inter_colors.py
just_test/: __init__.py
just_test/chess/: __init__.py  lines2.py
just_test/color/: mix_colors.py
just_test/just_test/chess/: fen.py
just_test/just_test/color/: __init__.py
just_test/just_test/school_tasks/: __init__.py  school_tasks.py
just_test/just_test/tests/: test_doctests.py
just_test/just_test/tests/texts/books/prepare/: test_prepare_book_text.py  test_reconstruct_direct_speech.py  test_sentence_part.py
just_test/just_test/texts/: __init__.py
just_test/just_test/texts/books/prepare/: english_cbow_dataset.py  paragraphs_reader.py  sent_tokenize.py
just_test/just_test/util/: __init__.py  random_pool.py
just_test/just_test/util/ml/: sample_distributor.py
just_test/tests/resources/texts/books/prepare/: reconstruct_direct_speech_cases.txt
just_test/tests/texts/: test_paragraphs_reader.py
just_test/tests/texts/books/prepare/: test_paragraphs_reader.py
just_test/texts/: __init__.py
just_test/texts/books/: __init__.py
just_test/texts/books/prepare/: __init__.py  direct_speech.py  english.py  english_cbow_dataset.py  sentence_part.py
just_test/util/: validate.py
just_test/util/ml/: __init__.py
school_tasks/: school_tasks.py
scripts/: init.sh  make_questions_blank_files.py  run_notebook.sh
tests/texts/: test_paragraphs_reader.py
texts/: sentence_gen.py  test1.py
(+1 files in other folders)
