[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "just_test"
version = "100.1"
description = "Just a test"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.license]
text = "Unlicense"
files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["just_test"]
exclude = ["just_test.tests*"]

[tool.setuptools.exclude-package-data]
"*" = ["tests/*"]
